...
    <string name="find_pilexa_title">Select a pilexa service on your local network:</string>
    <string name="searching">Searching... (This may take a minute)</string>
    <string name="prompt_username">Username:</string>
    <string name="prompt_password">Password:</string>
    <string name="submit">Submit</string>
    <string name="PREF_USER_ID">userId</string>
    <string name="done_message">Done!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_host">Host address:</string>
    <string name="prompt_port">Port:</string>
    <string name="port_hint">(leave empty for default)</string>
    <string name="action_forget_conn">Forget Connection</string>
    <string name="action_clear_msgs">Clear Messages</string>
</resources>

